k8s/default/whoami/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia-service.default.svc.cluster.local/api/authz/auth-request'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.durbin.casa?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    gethomepage.dev/href: 'https://whoami.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: whoami
    gethomepage.dev/group: Other
    gethomepage.dev/icon: mdi-account
    gethomepage.dev/name: Whoami
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
    gethomepage.dev/widget.type: customapi
    gethomepage.dev/widget.url: http://whoami-service/api
    gethomepage.dev/widget.mappings.0.field: hostname
    gethomepage.dev/widget.mappings.0.label: Hostname
    gethomepage.dev/widget.mappings.0.format: text
spec:
  ingressClassName: external
  rules:
    - host: &host whoami.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
